# AutoPrompt

./: README.md  benchmark_optimizer.py  pyproject.toml  requirements.txt  run_benchmark_optimization.py
config/: config_benchmark.yml
examples/: benchmark_dataset.csv
